# splat_bridge

./: README.md  pyproject.toml  run_nerf.sh  run_rosbag.sh
scripts/: download_data.py
splatbridge/: method_configs.py  ros_dataloader.py  ros_datamanager.py  ros_dataparser.py  ros_trainer.py
