[project]
name = "splatbridge"
version = "1.0"

dependencies = [
	"nerfstudio==1.0.3"
]

[tool.setuptools.packages.find]
include = ["splatbridge*"]

[tool.pyright]
extraPaths = ["splatbridge"]

[project.entry-points.'nerfstudio.method_configs']
ros-nerfacto = 'splatbridge.method_configs:RosNerfacto'
ros-depth-nerfacto = 'splatbridge.method_configs:RosDepthNerfacto'
ros-splatfacto = 'splatbridge.method_configs:RosSplatfacto'
ros-depth-splatfacto = 'splatbridge.method_configs:RosDepthSplatfacto'
